--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: 📦 Install Dependencies
-        run: npm install
+        run: |
+          cd roga91
+          npm install
 
       - name: 🚀 Deploy to VPS
         uses: appleboy/ssh-action@v0.1.10
